--- a/assets/css/sass/elements/_landscape.scss
+++ b/assets/css/sass/elements/_landscape.scss
@@ -17,7 +17,7 @@
           width: 100%;
           height: 100vh;
           margin: 60px auto;
-          @include transition(display, .2s);
+          @include show;
 
           li {
             width: 100%;
