--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,10 +414,6 @@ body {
       #main-header #header-nav {
         float: none;
         margin: auto; } }
-  #main-header #collapsed-menu {
-    -webkit-transition: all 0.5s;
-    -ms-transition: all 0.5s;
-    transition: all 0.5s; }
 
 #logo {
   -webkit-transition: all 0.3s;
@@ -473,9 +469,23 @@ body {
   display: inline-block;
   margin-top: 85px; }
   .state1 #header-nav.expanded {
-    display: block; }
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: visibility 0s linear 0.5s;
+    -ms-transition: visibility 0s linear 0.5s;
+    transition: visibility 0s linear 0.5s;
+    -webkit-transition: opacity 0.5s linear;
+    -ms-transition: opacity 0.5s linear;
+    transition: opacity 0.5s linear; }
 .state1 #collapsed-menu {
-  display: none; }
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: visibility 0s linear 0.5s;
+  -ms-transition: visibility 0s linear 0.5s;
+  transition: visibility 0s linear 0.5s;
+  -webkit-transition: opacity 0.2s linear;
+  -ms-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear; }
 @media screen and (max-width: 650px) {
   .state1 #logo {
     width: 25%; } }
@@ -523,17 +533,54 @@ body {
   width: 111px;
   margin-top: 18px; }
 .state2 #header-nav {
-  display: none; }
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: visibility 0s linear 0.5s;
+  -ms-transition: visibility 0s linear 0.5s;
+  transition: visibility 0s linear 0.5s;
+  -webkit-transition: opacity 0.2s linear;
+  -ms-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear; }
   .state2 #header-nav.expanded {
     display: block;
-    margin-top: 40px; }
+    margin-top: 40px;
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: visibility 0s linear 0.5s;
+    -ms-transition: visibility 0s linear 0.5s;
+    transition: visibility 0s linear 0.5s;
+    -webkit-transition: opacity 0.5s linear;
+    -ms-transition: opacity 0.5s linear;
+    transition: opacity 0.5s linear; }
 .state2 #collapsed-menu {
-  display: inline-block;
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: visibility 0s linear 0.5s;
+  -ms-transition: visibility 0s linear 0.5s;
+  transition: visibility 0s linear 0.5s;
+  -webkit-transition: opacity 0.5s linear;
+  -ms-transition: opacity 0.5s linear;
+  transition: opacity 0.5s linear;
   margin-top: 40px; }
   .state2 #collapsed-menu:hover {
-    display: none; }
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: visibility 0s linear 0.5s;
+    -ms-transition: visibility 0s linear 0.5s;
+    transition: visibility 0s linear 0.5s;
+    -webkit-transition: opacity 0.2s linear;
+    -ms-transition: opacity 0.2s linear;
+    transition: opacity 0.2s linear; }
 .state2 .expanded + #collapsed-menu {
-  display: none; }
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: visibility 0s linear 0.5s;
+  -ms-transition: visibility 0s linear 0.5s;
+  transition: visibility 0s linear 0.5s;
+  -webkit-transition: opacity 0.2s linear;
+  -ms-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear; }
 @media screen and (max-width: 650px) {
   .state2 #logo {
     width: 20%; } }
@@ -632,9 +679,14 @@ body {
       width: 100%;
       height: 100vh;
       margin: 60px auto;
-      -webkit-transition: display 0.2s;
-      -ms-transition: display 0.2s;
-      transition: display 0.2s; }
+      visibility: visible;
+      opacity: 1;
+      -webkit-transition: visibility 0s linear 0.5s;
+      -ms-transition: visibility 0s linear 0.5s;
+      transition: visibility 0s linear 0.5s;
+      -webkit-transition: opacity 0.5s linear;
+      -ms-transition: opacity 0.5s linear;
+      transition: opacity 0.5s linear; }
       #main-header #header-nav.expanded li {
         width: 100%;
         float: none;
