--- a/assets/css/sass/sections/_home.scss
+++ b/assets/css/sass/sections/_home.scss
@@ -9,7 +9,7 @@
 	  	width: 60%;
 	  }
 
-	  @media screen and (max-width: 650px) {
+	  @media screen and (max-width: 650px) and (min-height: 500px) {
 	  	width: 100%;
 	  }
 
