--- a/assets/css/sass/elements/_landscape.scss
+++ b/assets/css/sass/elements/_landscape.scss
@@ -4,6 +4,7 @@
     html {
       content: "isLandscape";
     }
+    
     #main-header {
 
       #logo {
@@ -40,25 +41,26 @@
       }
 
       #collapsed-menu {
-        margin: 20px auto;
-        float: none;
-        text-align: center;
+        display: none;
+      }
+    }
 
-        a {
-          display: inline-block;
-          padding: 0;
-          margin: 0;
-          background-position: 0;
-        }
+    footer {
+      .container {
+        height: $footer_h_2;
+      }
+
+      .container > div {
+        margin : 3% 0;
       }
     }
 
     .state1 {
-      @include setLayoutHeights($h);
+      @include setLayoutHeights($h, $footer_h_2);
     }
 
     .state2 {
-      @include setLayoutHeights($h);
+      @include setLayoutHeights($h, $footer_h_2);
 
       &#site {
         width: calc(100vw - #{$w});
@@ -79,71 +81,118 @@
           margin: 2% auto;
           width: 100%;
         }
+
+        #header-nav {
+          display: block;
+          position: relative;
+          top: 3%;
+          width: 100%;
+          height: 100%; 
+          @include show;
+          font-size: .65em;
+          text-align: center;
+
+          li {
+            width: 100%;
+            height: 15%;
+            display: block;
+            margin: 0;
+            border-width: 7px;
+            border-style: hidden;
+            border-left-style: solid;
+            border-left-color: $LIGHT_GRAY;
+
+            &.active-link,
+            &:hover {
+              border-left-color: $FUXSIA;
+            }
+
+            &.no-touch {
+              border-left-color: $LIGHT_GRAY;
+            }
+
+            a { 
+              margin: 50% 0 0;
+              padding: 0;
+              line-height: 0;
+            }
+          }
+        }
       }
 
-      #content .section.last {
-          min-height: calc(100vh - #{$footer_h_1});
+      #sections .contact.section.last {
+      //  min-height: 150px;
+        height: calc(100vh - #{$footer_h_2});
       }
     }
 
-    #content {
+    #sections {
 
       .header { 
         @media screen and (max-width: 650px) {
           width: initial;
           width: 70%;
         }
-      }
 
-      .sub-header {
-        float: none;
-      }
-
-      .home.section {
-        .container {
-          
-          min-height: calc(100vh - #{$h});
-
-          .header {
-            float: right;
-          }
-        }
-      }
-
-      .home.section {
-        header {
-          width: 80%;
-        }
-
-        > div {
+        .sub-header {
           float: none;
         }
       }
 
-      .about.section {
-        .header {
-          width: 80%;
-          padding-bottom: 5%;
+      .section {
+        .content {
+          padding: 0 0 12%;
+        }
 
-          > div {
-            float: none;
+        &.home {
+          .header {
+            width: 80%;
+
+            > div {
+              float: none;
+            }
+          }
+          .container {
+            
+            min-height: calc(100vh - #{$h});
+
+            .header {
+              float: right;
+            }
           }
         }
 
-        .tiles.three .tile {
-          width: 32%;
-          margin: auto;
+        &.about {
+          .header {
+            width: 80%;
+            padding-bottom: 5%;
+
+            > div {
+              float: none;
+            }
+          }
+
+          .content {
+            .tiles.three .tile {
+              width: 32%;
+              margin: auto;
+            }
+          }
         }
-      }
 
-      .contact.section {
+        &.contact {
 
-        .container {
-          
-          min-height: 150px;
+          .container {
+            min-height: initial;
+            height: 100%;
 
-          .sub-header {
-            float: right;
+            .header {
+              width: 100%;
+            }
+            
+            .sub-header {
+              float: right;
+            }
           }
         }
       }
