--- a/assets/css/sass/sections/_about.scss
+++ b/assets/css/sass/sections/_about.scss
@@ -31,6 +31,10 @@
       width: 80%;
       margin: auto;
       word-spacing: -1px;
+
+      @media screen and (max-width: 350px) {
+		  	width: 100%;
+			}	
     }
   }
 }
