--- a/assets/css/sass/sections/_home.scss
+++ b/assets/css/sass/sections/_home.scss
@@ -15,6 +15,7 @@
 
 	  @media screen and (max-width: 350px) {
 	  	margin-top: 5%;
+	  	width: 100%;
 	  }
    
     h1 {
@@ -32,6 +33,7 @@
   
 		.sub-header {
 		  float: right;
+		  margin-bottom: 10%;
 
 		  @media screen and (max-width: 480px) {
 		    float: none;
