--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,9 @@ body {
 
 #main-header {
   background-color: #E9E8E3; }
-  #main-header li:hover, #main-header li.active-link {
-    border-bottom: solid #DF3F54 3px; }
-  #main-header li.no-touch {
-    border-bottom: none; }
+  #main-header li.active-link, #main-header li:hover {
+    border: 3px solid #DF3F54;
+    border-style: hidden; }
   #main-header li a {
     color: #3A3A3A; }
 
@@ -193,6 +192,9 @@ img {
 
 footer.container {
   height: 100px; }
+  @media screen and (max-width: 480px) {
+    footer.container {
+      height: 80px; } }
   footer.container > div {
     position: relative;
     top: 50%;
@@ -203,7 +205,7 @@ footer.container {
       footer.container > div {
         display: block;
         width: 100%;
-        margin: 3% auto 1%;
+        margin: 3% auto 0;
         transform: none;
         top: 0; } }
   footer.container .site-info {
@@ -232,7 +234,8 @@ footer.container {
       width: 100%; } }
   @media screen and (max-width: 350px) {
     .home.section .header {
-      margin-top: 5%; } }
+      margin-top: 5%;
+      width: 100%; } }
   .home.section .header h1:first-child::before {
     content: " ";
     width: .55em;
@@ -243,7 +246,8 @@ footer.container {
     position: relative;
     top: .1em; }
   .home.section .header .sub-header {
-    float: right; }
+    float: right;
+    margin-bottom: 10%; }
     @media screen and (max-width: 480px) {
       .home.section .header .sub-header {
         float: none; } }
@@ -353,19 +357,16 @@ footer.container {
   width: 80%;
   margin: auto;
   word-spacing: -1px; }
+  @media screen and (max-width: 350px) {
+    .about.section .content p {
+      width: 100%; } }
 
-.contact.section .container {
-  min-height: 350px;
-  height: 70vh; }
-  @media screen and (max-width: 650px) {
-    .contact.section .container {
-      min-height: 350px; } }
+@media screen and (max-width: 350px) {
+  .contact.section .container {
+    min-height: 150px; } }
 .contact.section .header {
   position: relative;
-  top: 40%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  margin: 5% 0;
   width: 100%; }
   .contact.section .header .sub-header {
     float: right; }
@@ -412,6 +413,11 @@ body {
       #main-header #header-nav {
         float: none;
         margin: auto; } }
+    #main-header #header-nav li.active-link,
+    #main-header #header-nav li li:hover {
+      border-bottom-style: solid; }
+    #main-header #header-nav li.no-touch {
+      border: none; }
 
 #logo {
   -webkit-transition: all 0.3s;
@@ -615,7 +621,7 @@ body {
     height: 100%;
     min-height: calc(100vh - 80px); }
     .state2 #sections .section.last {
-      min-height: calc(100vh - 180px); } }
+      min-height: calc(100vh - 160px); } }
 
 #sections::before {
   content: " ";
@@ -633,11 +639,9 @@ body {
   @media screen and (max-width: 480px) {
     .section .header {
       width: 100%; } }
-  .section .header > div {
-    float: right; }
-    @media screen and (max-width: 650px) {
-      .section .header > div {
-        float: none; } }
+  @media screen and (max-width: 650px) {
+    .section .header > div {
+      float: none; } }
   .section .header .sub-header hr {
     border: 0;
     height: 3px;
@@ -706,42 +710,40 @@ body {
           padding: 0;
           margin: 0; }
   #main-header #collapsed-menu {
-    margin: 20px auto;
-    float: none;
-    text-align: center; }
-    #main-header #collapsed-menu a {
-      display: inline-block;
-      padding: 0;
-      margin: 0;
-      background-position: 0; }
+    display: none; }
+
+  footer .container {
+    height: 80px; }
+  footer .container > div {
+    margin: 3% 0; }
 
   .state1 #main-header {
-    height: 100px; }
+    height: 60px; }
   .state1 #sections::before {
-    height: 100px; }
+    height: 60px; }
   .state1 #sections .section {
     height: 100%;
-    min-height: calc(100vh - 100px); }
+    min-height: calc(100vh - 60px); }
     .state1 #sections .section.last {
-      min-height: calc(100vh - 200px); }
+      min-height: calc(100vh - 140px); }
 
   .state2 #main-header {
-    height: 100px; }
+    height: 60px; }
   .state2 #sections::before {
-    height: 100px; }
+    height: 60px; }
   .state2 #sections .section {
     height: 100%;
-    min-height: calc(100vh - 100px); }
+    min-height: calc(100vh - 60px); }
     .state2 #sections .section.last {
-      min-height: calc(100vh - 200px); }
+      min-height: calc(100vh - 140px); }
   .state2#site {
-    width: calc(100vw - 50px);
-    padding-left: 50px; }
+    width: calc(100vw - 70px);
+    padding-left: 70px; }
   .state2 #main-header {
     position: fixed;
     left: 0;
     top: 0;
-    width: 44px;
+    width: 64px;
     height: 100vh;
     padding: 3px;
     margin: 0; }
@@ -749,34 +751,72 @@ body {
       float: none;
       margin: 2% auto;
       width: 100%; }
-  .state2 #content .section.last {
-    min-height: calc(100vh - 100px); } }
+    .state2 #main-header #header-nav {
+      display: block;
+      position: relative;
+      top: 3%;
+      width: 100%;
+      height: 100%;
+      visibility: visible;
+      opacity: 1;
+      -webkit-transition: visibility 0s linear 0.5s;
+      -ms-transition: visibility 0s linear 0.5s;
+      transition: visibility 0s linear 0.5s;
+      -webkit-transition: opacity 0.5s linear;
+      -ms-transition: opacity 0.5s linear;
+      transition: opacity 0.5s linear;
+      font-size: .65em;
+      text-align: center; }
+      .state2 #main-header #header-nav li {
+        width: 100%;
+        height: 15%;
+        display: block;
+        margin: 0;
+        border-width: 7px;
+        border-style: hidden;
+        border-left-style: solid;
+        border-left-color: #E9E8E3; }
+        .state2 #main-header #header-nav li.active-link, .state2 #main-header #header-nav li:hover {
+          border-left-color: #DF3F54; }
+        .state2 #main-header #header-nav li.no-touch {
+          border-left-color: #E9E8E3; }
+        .state2 #main-header #header-nav li a {
+          margin: 50% 0 0;
+          padding: 0;
+          line-height: 0; }
+  .state2 #sections .contact.section.last {
+    height: calc(100vh - 80px); } }
 @media screen and (max-device-height: 600px) and (orientation: landscape) and (max-width: 650px) {
-  #content .header {
+  #sections .header {
     width: initial;
     width: 70%; } }
 @media screen and (max-device-height: 600px) and (orientation: landscape) {
-  #content .sub-header {
+  #sections .header .sub-header {
     float: none; }
-  #content .home.section .container {
-    min-height: calc(100vh - 100px); }
-    #content .home.section .container .header {
-      float: right; }
-  #content .home.section header {
+  #sections .section .content {
+    padding: 0 0 12%; }
+  #sections .section.home .header {
     width: 80%; }
-  #content .home.section > div {
-    float: none; }
-  #content .about.section .header {
+    #sections .section.home .header > div {
+      float: none; }
+  #sections .section.home .container {
+    min-height: calc(100vh - 60px); }
+    #sections .section.home .container .header {
+      float: right; }
+  #sections .section.about .header {
     width: 80%;
     padding-bottom: 5%; }
-    #content .about.section .header > div {
+    #sections .section.about .header > div {
       float: none; }
-  #content .about.section .tiles.three .tile {
+  #sections .section.about .content .tiles.three .tile {
     width: 32%;
     margin: auto; }
-  #content .contact.section .container {
-    min-height: 150px; }
-    #content .contact.section .container .sub-header {
+  #sections .section.contact .container {
+    min-height: initial;
+    height: 100%; }
+    #sections .section.contact .container .header {
+      width: 100%; }
+    #sections .section.contact .container .sub-header {
       float: right; } }
 
 /*# sourceMappingURL=style.css.map */
