--- a/assets/css/sass/sections/_work.scss
+++ b/assets/css/sass/sections/_work.scss
@@ -9,6 +9,7 @@
   }
 
   .content {
+    // ------------------------------------ GRID
     @include details;
     @include imgAnimation;
     @include tileLink;
