--- a/assets/css/sass/sections/_contact.scss
+++ b/assets/css/sass/sections/_contact.scss
@@ -1,21 +1,14 @@
 .contact.section {
 	.container {
-		//min-height: 350px;
-		//height: 70vh;
-
-		@media screen and (max-width: 650px) {
-	//		min-height: 350px;
-		}
-
 		@media screen and (max-width: 350px) {
 			min-height: 150px;
 		}
 	}
 	
 	.header {
-   // @include vCentered(40%);
    	position: relative;
-   	margin: 5% 0;
+   //	height: 100%;
+   	//padding: 5% 0;
 
     width: 100%;
   
