quick fix hover no-touch. TODO color gets defined in layout file.

--- a/assets/css/sass/layout/_layout.scss
+++ b/assets/css/sass/layout/_layout.scss
@@ -67,6 +67,7 @@ body {
     li {
     	&.no-touch {
       	border: none;
+      	border-color: $LIGHT_GRAY !important;
     	}
 
     	&.active-link,
