--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,7 +414,8 @@ body {
         float: none;
         margin: auto; } }
     #main-header #header-nav li.no-touch {
-      border: none; }
+      border: none;
+      border-color: #E9E8E3 !important; }
     #main-header #header-nav li.active-link, #main-header #header-nav li:hover {
       border-bottom-style: solid;
       border-color: #DF3F54; }
@@ -819,3 +820,4 @@ body {
     #sections .section.contact .container .sub-header {
       float: right; } }
 
+/*# sourceMappingURL=style.css.map */
