--- a/assets/css/sass/_settings.scss
+++ b/assets/css/sass/_settings.scss
@@ -1,4 +1,4 @@
-// ---------------------- ENJOY MONDAYS PATTERN */
+// ---------------------- ENJOY MONDAYS PATTERN
 
 // ------------------------------------- COLORS
 
