--- a/assets/css/sass/elements/_landscape.scss
+++ b/assets/css/sass/elements/_landscape.scss
@@ -9,7 +9,8 @@
 
       #logo {
         width: 18%;
-        margin: 2% 0;
+        margin: 0;
+        padding: 2% 0;
         float: left;
       }
 
@@ -76,7 +77,8 @@
 
         #logo {
           float: none;
-          margin: 2% auto;
+          margin: 0 auto;
+          padding: 2% 0;
           width: 100%;
         }
 
@@ -119,7 +121,6 @@
       }
 
       #sections .contact.section.last {
-      //  min-height: 150px;
         height: calc(100vh - #{$footer_h_2});
       }
     }
@@ -151,7 +152,6 @@
             }
           }
           .container {
-            
             min-height: calc(100vh - #{$h});
 
             .header {
@@ -169,7 +169,6 @@
               float: none;
             }
           }
-
           .content {
             .tiles.three .tile {
               width: 32%;
@@ -179,7 +178,6 @@
         }
 
         &.contact {
-
           .container {
             min-height: initial;
             height: 100%;
