--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,7 +463,7 @@ body {
     min-height: calc(100vh - 239px); }
 .state1 #logo {
   width: 149px;
-  margin-top: 40px; }
+  padding-top: 40px; }
 .state1 #header-nav {
   display: inline-block;
   margin-top: 85px; }
@@ -499,7 +499,8 @@ body {
     .state1 #sections .section.last {
       min-height: calc(100vh - 200px); }
   .state1 #logo {
-    margin: 2.5% auto; }
+    margin: 0 auto;
+    padding: 2.5% 0; }
   .state1 #header-nav {
     margin: 0 auto; }
     .state1 #header-nav.expanded {
@@ -530,7 +531,7 @@ body {
     min-height: calc(100vh - 211px); }
 .state2 #logo {
   width: 111px;
-  margin-top: 18px; }
+  padding-top: 18px; }
 .state2 #header-nav {
   display: none;
   visibility: hidden;
@@ -543,7 +544,7 @@ body {
   transition: opacity 0.2s linear; }
   .state2 #header-nav.expanded {
     display: block;
-    margin-top: 40px;
+    padding-top: 40px;
     visibility: visible;
     opacity: 1;
     -webkit-transition: visibility 0s linear 0.5s;
@@ -592,9 +593,10 @@ body {
     height: 100%;
     min-height: calc(100vh - 100px); }
     .state2 #sections .section.last {
-      min-height: calc(100vh - 200px); }
+      min-height: calc(100vh - 180px); }
   .state2 #logo {
-    margin: 2.5% auto; }
+    margin: 0 auto;
+    padding: 2.5% 0; }
   .state2 #collapsed-menu {
     display: none; }
   .state2 #header-nav {
@@ -678,7 +680,8 @@ body {
 
   #main-header #logo {
     width: 18%;
-    margin: 2% 0;
+    margin: 0;
+    padding: 2% 0;
     float: left; }
   #main-header #header-nav {
     margin-top: 5%; }
@@ -733,19 +736,21 @@ body {
       min-height: calc(100vh - 140px); }
   .state2#site {
     width: calc(100vw - 70px);
-    padding-left: 70px; }
+    padding-left: 70px;
+    overflow: hidden; }
   .state2 #main-header {
     position: fixed;
     left: 0;
     top: 0;
-    width: 64px;
-    height: 100vh;
-    padding: 3px;
-    margin: 0; }
+    width: 70px;
+    height: 100vh; }
+    .state2 #main-header .container {
+      padding-left: 0; }
     .state2 #main-header #logo {
-      float: none;
-      margin: 2% auto;
-      width: 100%; }
+      float: right;
+      margin: 0 auto;
+      padding: 4% 0;
+      width: 95%; }
     .state2 #main-header #header-nav {
       display: block;
       position: relative;
@@ -763,11 +768,11 @@ body {
       font-size: .65em;
       text-align: right; }
       .state2 #main-header #header-nav li {
-        width: 85%;
+        width: 90%;
         height: 15%;
         display: block;
         margin: 0;
-        border-width: 7px;
+        border-width: 6px;
         border-style: hidden;
         border-left-style: solid;
         border-left-color: #E9E8E3; }
